added title and header contents

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!Docktype html>
 <html>
 	<header>
-		<title></title>
+		<title>Home page</title>
 	</header>
 	<body>
+		<h1>This is home page</h1>
 	</body>
 </html>
