--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<header>
 		<title>Home page</title>
+		<link rel="style sheet" href="css/style.css">
 	</header>
 	<body>
 		<h1>This is home page</h1>
