--- a/lab03/index.html
+++ b/lab03/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<title>Lab03</title>
-
 		<meta charset="UTF-8">
 		<meta name="description" content="Lab03">
 		<meta name="author" content="Hanna Lee">
@@ -12,16 +11,18 @@
     <link rel="stylesheet" href="main.css">
 	  <!--link to the java script external file-->
     <script type="text/javascript" src="script.js"></script>
+
 	</head>
 	<!--body section-->
 	<body>
+  <header>
 	<!--H1 heading-->
-    <h1>Lab02</h1>
-	<!--Non script section in case browser dosn't support javascript displays message-->
-    <noscript>
-      &lt;Your browser does not support JavaScript! Check your browser setting&gt;
-    </noscript>
-	<!--Form section with input tags and button type to display buttons-->
+    <h1>Lab03</h1>
+  </header>
+
+  <form>
+  <input class="caculate" type="button" value="Check Coins" onClick="javascript:second()">
+  </form>
 
 	</body>
 </html>
