--- a/lab4/index.html
+++ b/lab4/index.html
@@ -12,7 +12,16 @@
 
 <body>
   <h1>Birthday Calculator</h1>
-
+  <form name="birthDay">
+    <input type="button" class="button" onClick="calculate()" value="Check Your Birthday">
+  </form>
+  <h3>Today Is :</h3>
+  <p id="display1"></p>
+  <h3>Your Birthday Is :</h3>
+  <p id="display2"></p>
+  <h3>Till your next birthday, Days left:</h3>
+  <p id="display3"></p>
+  
 
   <noscript>
   &lt;Your browser does not support JavaScript! Check your browser setting&gt;
